# wagtail-rss-feed-block

./: LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: add-to-projects.yml  test-pypi-publish.yml
src/wagtail_rss_feed/: apps.py  blocks.py
