[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wagtail-rss-feed"
version = "0.1.0"
authors = [
  { name="Plan4All", email="h4e@lesprojekt.cz" },
]
description = "Easilly add RSS feed to your Wagtail page."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    'Intended Audience :: Developers',
    "Operating System :: OS Independent",
]

dependencies = [    
    "bleach",
    "feedparser",
    "wagtail >= 4.2.4",    
]