[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wagtail-rss-feed-block"
version = "0.1.0"
authors = [
  { name="LESPROJEKT-SLUŽBY s.r.o.", email="support@hub4everybody.com" },
]
description = "Content block displaying RSS feed for Wagtail CMS"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    'Intended Audience :: Developers',
    "Operating System :: OS Independent",
]

dependencies = [    
    "bleach",
    "feedparser",
    "wagtail >= 4.2.4",    
]